updated imports in annotationstation

--- a/core/igb/src/test/java/com/affymetrix/igb/gylph/AnnotationStation.form
+++ b/core/igb/src/test/java/com/affymetrix/igb/gylph/AnnotationStation.form
@@ -72,11 +72,11 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jPanel1" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jPanel3" alignment="0" min="-2" pref="1029" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jPanel1" max="32767" attributes="0"/>
+                  <Component id="jPanel3" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -98,17 +98,28 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="startFieldLabel" linkSize="1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="startTextField" linkSize="3" min="-2" pref="73" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="stopFieldLabel" linkSize="1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="stopTextField" linkSize="3" min="-2" pref="73" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="typeComboBox" pref="452" max="32767" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="startFieldLabel" linkSize="1" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
+                          <Component id="startTextField" linkSize="3" min="-2" pref="73" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="autoLayoutCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="rowTextLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="stopFieldLabel" linkSize="1" alignment="0" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="glyphRowTextField" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="stopTextField" linkSize="3" alignment="0" min="-2" pref="73" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="113" max="-2" attributes="0"/>
+                  <Component id="typeComboBox" max="32767" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="addButton" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -136,7 +147,13 @@
                       <Component id="startTextField" linkSize="4" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="startFieldLabel" linkSize="2" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="2" attributes="0">
+                      <Component id="rowTextLabel" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="glyphRowTextField" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Component id="autoLayoutCheckBox" alignment="2" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="68" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -194,6 +211,21 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Color"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="rowTextLabel">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Row"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="glyphRowTextField">
+        </Component>
+        <Component class="javax.swing.JCheckBox" name="autoLayoutCheckBox">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="AutoLayoutRow"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="autoLayoutCheckBoxActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
