--- a/plugins/plugins_page/src/main/java/com/lorainelab/igb/plugins/repos/view/BundleRepositoryPrefsView.form
+++ b/plugins/plugins_page/src/main/java/com/lorainelab/igb/plugins/repos/view/BundleRepositoryPrefsView.form
@@ -61,7 +61,7 @@
             </Property>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="createTable()"/>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="table"/>
           </AuxValues>
         </Component>
       </SubComponents>
