some refactoring and removal of some modules from production jar since they are only used in development (e.g. felix file install, http, web console, ect)

--- a/core/igb/src/main/java/com/affymetrix/igb/prefs/OtherOptionsView.form
+++ b/core/igb/src/main/java/com/affymetrix/igb/prefs/OtherOptionsView.form
@@ -355,7 +355,7 @@
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="PreferenceUtils.createCheckBox(&quot;Display Errors on Status Bar&quot;,&#xa;    PreferenceUtils.DISPLAY_ERRORS_STATUS_BAR, PreferenceUtils.default_display_errors)"/>
-        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="if(displayOption.isSelected())&#xa;    com.affymetrix.genometry.util.ErrorHandler.setDisplayHandler(IGB.getSingleton().status_bar);&#xa;else&#xa;    com.affymetrix.genometry.util.ErrorHandler.setDisplayHandler(null);"/>
+        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="if(displayOption.isSelected())&#xa;    com.affymetrix.genometry.util.ErrorHandler.setDisplayHandler(IGB.getSingleton().getStatusBar());&#xa;else&#xa;    com.affymetrix.genometry.util.ErrorHandler.setDisplayHandler(null);"/>
       </AuxValues>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
